Modification ecriture